# efficientnet

./: efficientnet_example.py  pyproject.toml
