[tool.poetry]
name = "efficient"
version = "0.1.0"
description = ""
authors = ["Nonaka Kenya <k.nonaka@opt.ne.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.0"
torchaudio = "^0.10.0"
torchvision = "^0.11.1"
efficientnet-pytorch = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
